<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pelis"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/etBiografia"
        android:layout_width="209dp"
        android:layout_height="63dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/biografia"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="108dp"
        android:background="#1527CD"
        android:paddingLeft="30dp"
        android:paddingTop="3dp"
        android:text="@string/peliEscollida"
        android:textColor="#C11760"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chConfirmar" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etCognom"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/cognom"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNom" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="199dp"
        android:background="#DD0D0D"
        android:paddingLeft="40dp"
        android:paddingTop="3dp"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="138dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/avatar" />

    <CheckBox
        android:id="@+id/chConfirmar"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="214dp"
        android:background="#B5C1D6"
        android:checked="false"
        android:clickable="true"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBiografia" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:background="#B5C1D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCognom" />

</androidx.constraintlayout.widget.ConstraintLayout>

