<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pelis"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/ptDirector"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/director"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptTitol" />

    <EditText
        android:id="@+id/ptTitol"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/titol"
        android:inputType="textPersonName"
        android:paddingLeft="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="179dp"
        android:background="#DD0D0D"
        android:paddingLeft="22dp"
        android:paddingTop="3dp"
        android:text="@string/addFilm"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/benviar"

        android:layout_width="131dp"

        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        android:background="#DD0D0D"
        android:onClick="send"
        android:text="@string/send"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb" />

    <RatingBar
        android:id="@+id/rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="86dp"
        android:background="#B5C1D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptDate" />

    <EditText
        android:id="@+id/ptDate"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="#B5C1D6"
        android:ems="10"
        android:hint="@string/any"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptDirector" />
</androidx.constraintlayout.widget.ConstraintLayout>