<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pelis"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="224dp"
        android:background="#D32F2F"
        android:onClick="profile"
        android:text="@string/profile"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="97dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="385dp"
        android:layout_marginBottom="236dp"
        android:background="#D32F2F"
        android:onClick="myRates"
        android:text="@string/myRates"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="275dp"
        android:background="#DD0D0D"
        android:paddingLeft="22dp"
        android:paddingTop="3dp"
        android:text="@string/activity1Nombre"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>